<resources>
    <string name="app_name">ConnectTheWorld</string>
    <string name="title_activity_main">Drawp</string>
    <string name="google_maps_key">AIzaSyC6_jLfZ8yT2ORqSuvyDw8UZyhEXx4CDyI</string>

    <string name="popup_draw_title">Drawp Something!</string>
    <string name="popup_browse_title">View Drawps</string>

    <!--Drawing Strings-->
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="upload">Upload</string>
    <string name="paint">Paint</string>

    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

    <!--Login Screen Strings-->
    <string name="email_hint">E-Mail</string>
    <string name="pass_hint">Password</string>
    <string name="login_bttn">Login</string>
    <string name="create_bttn">Create</string>

    <!--Map Fragment Strings-->
    <string name="map_title">Welcome Back %s!</string>

    <!--Browsing Fragment Strings-->
    <string name="author_browse">Drawped by %s</string>
    <string name="voted">Voted!</string>

    <string name="general">%s</string>

</resources>
