<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/EBlue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/circle_icons_brush_pencil__1_"/>

        <EditText
                android:id="@+id/login_email"
                android:hint="@string/email_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_margin="5dp"/>

        <EditText
                android:id="@+id/login_password"
                android:hint="@string/pass_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_margin="5dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                    android:id="@+id/login_button"
                    android:text="@string/login_bttn"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/seagreen"/>

            <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/create_button"
                    android:text="@string/create_bttn"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/seagreen"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>